<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/media_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_headline"
        android:textSize="20sp"
        android:textColor="@color/gold"
        android:fontFamily="@font/cinzel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/media_reactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_reactions"
        android:textSize="16sp"
        android:textColor="@color/accent"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/media_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue"
        android:background="@drawable/button_background"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@id/media_reactions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>